BEE-69470: Remove Commons Lang 2 (org.apache.commons.lang) usage
Jenkins core is dropping commons-lang:2.6 (jenkinsci/jenkins#26905); replace
all 16 affected source files with plain Java 21 equivalents. No new library
dependencies introduced — every call replaced with a JDK 21 idiom.

The one double-getter (EC2SSHLauncher.getOfflineCauseReason()) is cached
in a local to satisfy the SpotBugs NP_NULL rule. Regression guard added to
pom.xml: <ban-commons-lang-2.skip>false</ban-commons-lang-2.skip>.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>